validation period component styled, so it looks more like the one on the current prod instance

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -1032,6 +1032,12 @@ p-inputswitch.ng-dirty.ng-invalid > .p-inputswitch {
   border-top-left-radius: 0;
 }
 
+#fromDateInput .p-inputtext, #toDateInput .p-inputtext{
+  border-left: none;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 0;
+}
+
 .p-inputtext:enabled:hover {
   border-color: #ced4da;
 }
