--- a/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
+++ b/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
@@ -7,22 +7,50 @@
     </label>
   </ng-template>
   <div class="p-grid p-pt-4">
-    <div class="p-col-12 p-sm-6">
-      <div class="p-float-label p-m-2">
-        <p-calendar id="fromDateInput" dateFormat="yy-mm-dd" [monthNavigator]="true" [yearNavigator]="true"
-                    yearRange="1970:2100"
-                    [ngModel]="(validationPeriodModel.intervalFrom$|async)"
-                    (ngModelChange)="validationPeriodModel.intervalFrom$.next($event)"></p-calendar>
-        <label for="fromDateInput">From</label>
+    <div class="p-col-12 p-sm-5">
+      <div class="p-grid" id="fromField">
+        <div class="label p-col-4">
+          <div class="p-fluid">
+            <div>From</div>
+          </div>
+        </div>
+        <div class="p-col-8 p-px-0 p-mx-0">
+          <div class="p-fluid">
+            <div class="p-float-label">
+              <p-calendar id="fromDateInput" dateFormat="yy-mm-dd" [monthNavigator]="true" [yearNavigator]="true"
+                          yearRange="1970:2100"
+                          [ngModel]="(validationPeriodModel.intervalFrom$|async)"
+                          (ngModelChange)="validationPeriodModel.intervalFrom$.next($event)"></p-calendar>
+              <label for="fromDateInput">From</label>
+            </div>
+          </div>
+
+        </div>
       </div>
     </div>
 
-    <div class="p-col-12 p-sm-6">
-      <div class="p-float-label p-m-2">
-        <p-calendar id="toDateInput" dateFormat="yy-mm-dd" [monthNavigator]="true" [yearNavigator]="true"
-                    yearRange="1970:2100" [ngModel]="(validationPeriodModel.intervalTo$|async)"
-                    (ngModelChange)="validationPeriodModel.intervalTo$.next($event)"></p-calendar>
-        <label for="toDateInput">To</label>
+    <div class="p-col-12 p-sm-2">
+      <div class="p-d-flex p-jc-center">
+      </div>
+    </div>
+
+    <div class="p-col-12 p-sm-5">
+      <div class="p-grid" id="toField">
+        <div class="label p-col-4">
+          <div class="p-fluid">
+            <div>To</div>
+          </div>
+        </div>
+        <div class="p-col-8 p-px-0 p-mx-0">
+          <div class="p-fluid">
+            <div class="p-float-label">
+              <p-calendar id="toDateInput" dateFormat="yy-mm-dd" [monthNavigator]="true" [yearNavigator]="true"
+                          yearRange="1970:2100" [ngModel]="(validationPeriodModel.intervalTo$|async)"
+                          (ngModelChange)="validationPeriodModel.intervalTo$.next($event)"></p-calendar>
+              <label for="toDateInput">To</label>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
