class label changed name to small-label to avoid using the same name for different classes

--- a/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
+++ b/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
@@ -14,7 +14,7 @@
           <div class="p-d-flex p-jc-center  p-pb-2">
           </div>
         </div>
-        <div class="label p-col-4">
+        <div class="small-label p-col-4">
           <div class="p-fluid">
             <div pTooltip="Lower left bounding box corner">Lower left</div>
           </div>
@@ -64,7 +64,7 @@
 <!--            Upper right-->
           </div>
         </div>
-        <div class="label p-col-4">
+        <div class="small-label p-col-4">
           <div class="p-fluid">
             <div pTooltip="Upper right bounding box corner">Upper right</div>
           </div>
