--- a/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
+++ b/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
@@ -9,7 +9,7 @@
   <div class="p-grid p-pt-4">
     <div class="p-col-12 p-sm-5">
       <div class="p-grid" id="fromField">
-        <div class="label p-col-4">
+        <div class="small-label p-col-4">
           <div class="p-fluid">
             <div>From</div>
           </div>
@@ -36,7 +36,7 @@
 
     <div class="p-col-12 p-sm-5">
       <div class="p-grid" id="toField">
-        <div class="label p-col-4">
+        <div class="small-label p-col-4">
           <div class="p-fluid">
             <div>To</div>
           </div>
