--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -309,7 +309,7 @@ img {
   overflow-y: hidden;
 }
 
-.label {
+.small-label {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", "Liberation Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   color: white;
