--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -321,6 +321,7 @@ img {
   background-color: #00AAE3;
   display: flex;
   align-items: center;
+  min-width: 4.5rem;
   max-width: 7rem;
   text-align: center;
 }
