--- a/UI/src/app/modules/anomalies/components/anomalies/anomalies.component.html
+++ b/UI/src/app/modules/anomalies/components/anomalies/anomalies.component.html
@@ -6,19 +6,27 @@
       <span class="pi pi-question-circle"></span>
     </label>
   </ng-template>
-  <div class="p-grid p-pt-4">
-    <div class="p-col-6">
-      <div class="p-float-label p-m-2">
-        <p-dropdown id="anomaliesMethodSelector"
-                    [options]="availableAnomalyMethodModels"
-                    [ngModel]="selectedMethod$|async"
-                    (ngModelChange)="selectedMethod$.next($event)"
-                    optionLabel="description"></p-dropdown>
-        <label for="anomaliesMethodSelector">Method</label>
+  <div class="p-grid p-pt-4" style="justify-content: center">
+    <div class="p-col-12 p-sm-4">
+      <div class="p-grid" id="method">
+        <div class="small-label p-col-4">
+          <div class="p-fluid">
+            <div>Method</div>
+          </div>
+        </div>
+        <div class="p-col-7 p-px-0">
+          <div class="p-float-label">
+            <p-dropdown id="anomaliesMethodSelector"
+                        [options]="availableAnomalyMethodModels"
+                        [ngModel]="selectedMethod$|async"
+                        (ngModelChange)="selectedMethod$.next($event)"
+                        optionLabel="description"></p-dropdown>
+            <label for="anomaliesMethodSelector">Method</label>
+          </div>
+        </div>
       </div>
     </div>
-
-    <div class="p-col-12 p-sm-6">
+    <div class="p-col-12 p-sm-8">
       <qa-anom-climatology *ngIf="((selectedMethod$|async).method$|async)==anomaliesClimatology"
                            [anomaliesModel]="anomaliesModel"></qa-anom-climatology>
     </div>
