--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -1038,7 +1038,7 @@ p-inputswitch.ng-dirty.ng-invalid > .p-inputswitch {
   border-top-left-radius: 0;
 }
 
-#method .p-dropdown{
+#method .p-dropdown, #scalingMethod .p-dropdown, #scalingTo .p-dropdown{
   border-left: none;
   border-bottom-left-radius: 0;
   border-top-left-radius: 0;
