naming validation field styled

--- a/UI/src/app/pages/validate/validate.component.html
+++ b/UI/src/app/pages/validate/validate.component.html
@@ -145,7 +145,7 @@
       <div class="p-col-10">
         <div class="p-grid p-px-2">
             <span class="label p-col-1">
-              <label for="name">Name</label>
+              <label for="name">Name your validation</label>
             </span>
           <input class="form-field p-col"
                  id="name"
