--- a/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
@@ -1,7 +1,7 @@
 <!-- custom -->
 <div *ngIf="!published" class="container p-text-center p-mb-5 p-mt-4" style="max-width: 40rem;">
   <h1>My validations</h1>
-  <p *ngIf="!validations" class="lead text-muted">
+  <p *ngIf="!validations.length" class="lead text-muted">
     You have not started any validations yet. Visit the <a routerLink="/validate">validation page</a>
     to start your own validation run.
   </p>
@@ -9,6 +9,7 @@
 
 <!-- published -->
 <div *ngIf="published" class="container p-text-center p-mb-5 p-mt-4" style="max-width: 40rem;">
+  {{validations.length}}
   <h1>Published validations</h1>
   <p class="lead text-muted">
     The QA4SM validations below have been published by their owners to <a target="_blank" href="https://zenodo.org/" rel="noreferrer">Zenodo</a>
@@ -17,13 +18,13 @@
   </p>
 </div>
 <!-- Sorting -->
-<div *ngIf="validations" class="container p-mb-5 p-mt-4" style="max-width: 60rem;">
+<div *ngIf="validations.length" class="container p-mb-3 p-mt-2" [style]="{'max-width': '60rem'}">
   <qa-sorting-form (orderQueryName)="getOrder($event)"></qa-sorting-form>
 </div>
 
 <!-- Rows -->
 <div class="card-deck p-mb-3">
-  <div class="container p-mb-5 p-mt-4" style="max-width: 60rem;">
+  <div class="container p-mb-5 p-mt-1" style="max-width: 60rem;">
     <div *ngFor="let valrun of validations  | paginate :
         {itemsPerPage: limit, currentPage: page, totalItems: numberOfValidations}">
 
@@ -31,7 +32,7 @@
       <br/>
     </div>
     <!--    Pagination -->
-    <pagination-template #p="paginationApi"
+    <pagination-template *ngIf="validations.length" #p="paginationApi"
                          (pageChange)="handlePageChange($event)">
 
       <div class="p-text-center">
