--- a/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
+++ b/UI/src/app/modules/validation-result/components/validation-page-paginated/validation-page-paginated.component.html
@@ -1,67 +1,77 @@
-<!-- custom -->
-<div *ngIf="!published" class="container p-text-center p-mb-5 p-mt-4" style="max-width: 40rem;">
-  <h1>My validations</h1>
-  <p *ngIf="!validations.length" class="lead text-muted">
-    You have not started any validations yet. Visit the <a routerLink="/validate">validation page</a>
-    to start your own validation run.
-  </p>
-</div>
+<div class="p-grid no-gutters">
+  <div class="
+    p-col-12
+    p-md-10 p-md-offset-1
+    p-lg-10 p-lg-offset-1
+    p-xl-8 p-xl-offset-2">
+    <div class="p-grid" style="justify-content: center">
 
-<!-- published -->
-<div *ngIf="published" class="container p-text-center p-mb-5 p-mt-4" style="max-width: 40rem;">
-  {{validations.length}}
-  <h1>Published validations</h1>
-  <p class="lead text-muted">
-    The QA4SM validations below have been published by their owners to <a target="_blank" href="https://zenodo.org/" rel="noreferrer">Zenodo</a>
-    and
-    can be referenced with a <a target="_blank" href="https://www.doi.org/" rel="noreferrer">DOI</a>.
-  </p>
-</div>
-<!-- Sorting -->
-<div *ngIf="validations.length" class="container p-mb-3 p-mt-2" [style]="{'max-width': '60rem'}">
-  <qa-sorting-form (orderQueryName)="getOrder($event)"></qa-sorting-form>
-</div>
-
-<!-- Rows -->
-<div class="card-deck p-mb-3">
-  <div class="container p-mb-5 p-mt-1" style="max-width: 60rem;">
-    <div *ngFor="let valrun of validations  | paginate :
-        {itemsPerPage: limit, currentPage: page, totalItems: numberOfValidations}">
-
-      <qa-validationrun-row [published]=published [validationRun]="valrun"></qa-validationrun-row>
-      <br/>
-    </div>
-    <!--    Pagination -->
-    <pagination-template *ngIf="validations.length" #p="paginationApi"
-                         (pageChange)="handlePageChange($event)">
-
-      <div class="p-text-center">
-        <ul class="custom-pagination custom-responsive custom-star-inserted justify-content-center" aria-label="Pagination">
-          <li class="pagination-previous" [class.disabled]="p.isFirstPage()">
-            <div *ngIf="!p.isFirstPage()" (click)="p.previous()"> <span class="pi pi-angle-left"></span> </div>
-            <div *ngIf="p.isFirstPage()" [class.disabled]="true"> <span class="pi pi-angle-left"></span> </div>
-          </li>
-
-          <li *ngFor="let page of p.pages" [class.current]="p.getCurrent() === page.value">
-            <div (click)="p.setCurrent(page.value)"
-                *ngIf="p.getCurrent() !== page.value"
-                 [class.current]="p.getCurrent() === page.value">
-              <span>{{ page.label }}</span>
-            </div>
-            <div *ngIf="p.getCurrent() === page.value" [class.current]="p.getCurrent() === page.value">
-              <span>{{ page.label }}</span>
-            </div>
-          </li>
-
-          <li class="pagination-next" [class.disabled]="p.isLastPage()">
-            <div *ngIf="!p.isLastPage()" (click)="p.next()"> <span class="pi pi-angle-right"></span> </div>
-            <div *ngIf="p.isLastPage()" [class.disabled]="true"> <span class="pi pi-angle-right"></span> </div>
-          </li>
-        </ul>
+      <!-- custom -->
+      <div *ngIf="!published" class="p-col-10 p-text-center">
+        <h1>My validations</h1>
+        <p *ngIf="!validations.length" class="lead text-muted">
+          You have not started any validations yet. Visit the <a routerLink="/validate">validation page</a>
+          to start your own validation run.
+        </p>
       </div>
 
-    </pagination-template>
+      <!-- published -->
+      <div *ngIf="published" class="p-col-10 p-text-center">
+        <h1>Published validations</h1>
+        <p class="lead text-muted">
+          The QA4SM validations below have been published by their owners to <a target="_blank"
+                                                                                href="https://zenodo.org/"
+                                                                                rel="noreferrer">Zenodo</a>
+          and
+          can be referenced with a <a target="_blank" href="https://www.doi.org/" rel="noreferrer">DOI</a>.
+        </p>
+      </div>
 
+      <div *ngIf="validations.length" class="p-col-10">
+        <qa-sorting-form (orderQueryName)="getOrder($event)"></qa-sorting-form>
+      </div>
 
+      <!-- Rows -->
+      <div *ngIf="validations.length" class="p-col-10">
+        <div *ngFor="let valrun of validations  | paginate :
+        {itemsPerPage: limit, currentPage: page, totalItems: numberOfValidations}">
+
+          <qa-validationrun-row [published]=published [validationRun]="valrun"></qa-validationrun-row>
+          <br/>
+        </div>
+        <!--    Pagination -->
+        <pagination-template *ngIf="validations.length" #p="paginationApi"
+                             (pageChange)="handlePageChange($event)">
+
+          <div class="p-text-center">
+            <ul class="custom-pagination custom-responsive custom-star-inserted justify-content-center"
+                aria-label="Pagination">
+              <li class="pagination-previous" [class.disabled]="p.isFirstPage()">
+                <div *ngIf="!p.isFirstPage()" (click)="p.previous()"><span class="pi pi-angle-left"></span></div>
+                <div *ngIf="p.isFirstPage()" [class.disabled]="true"><span class="pi pi-angle-left"></span></div>
+              </li>
+
+              <li *ngFor="let page of p.pages" [class.current]="p.getCurrent() === page.value">
+                <div (click)="p.setCurrent(page.value)"
+                     *ngIf="p.getCurrent() !== page.value"
+                     [class.current]="p.getCurrent() === page.value">
+                  <span>{{ page.label }}</span>
+                </div>
+                <div *ngIf="p.getCurrent() === page.value" [class.current]="p.getCurrent() === page.value">
+                  <span>{{ page.label }}</span>
+                </div>
+              </li>
+
+              <li class="pagination-next" [class.disabled]="p.isLastPage()">
+                <div *ngIf="!p.isLastPage()" (click)="p.next()"><span class="pi pi-angle-right"></span></div>
+                <div *ngIf="p.isLastPage()" [class.disabled]="true"><span class="pi pi-angle-right"></span></div>
+              </li>
+            </ul>
+          </div>
+
+        </pagination-template>
+      </div>
+
+    </div>
   </div>
 </div>
