--- a/UI/src/styles.scss
+++ b/UI/src/styles.scss
@@ -326,6 +326,11 @@ img {
   text-align: center;
 }
 
+#sortingForm .small-label{
+  justify-content: center;
+  max-width: 100%;
+}
+
 
 // @media
 
