--- a/UI/src/app/modules/filter/components/basic-filter/basic-filter.component.html
+++ b/UI/src/app/modules/filter/components/basic-filter/basic-filter.component.html
@@ -4,6 +4,7 @@
                 [disabled]="filterModel.readonly"
                 [binary]="true"
                 (onChange)="include_filters($event); exclude_filters($event)"
+                [pTooltip]="filterModel.filterDto.help_text"
     ></p-checkbox>
   </div>
 </div>
