--- a/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
+++ b/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
@@ -24,7 +24,8 @@
             <div class="p-float-label">
               <p-inputNumber id="minLatInput" [minFractionDigits]="1" [maxFractionDigits]="3"
                              [ngModel]="subsetModel.minLat$|async"
-                             [min]="checkVal(subsetModel.minLat$|async)"
+                             [min]="checkValIfLimited(subsetModel.minLat$|async)"
+                             [max] ="checkValIfLimited(subsetModel.maxLat$|async, true)"
                              (ngModelChange)="subsetModel.minLat$.next($event)"></p-inputNumber>
 
               <label for="minLatInput">Lat</label>
@@ -37,7 +38,8 @@
             <div class="p-float-label ">
               <p-inputNumber id="minLonInput" [minFractionDigits]="1" [maxFractionDigits]="3"
                              [ngModel]="subsetModel.minLon$|async"
-                             [min]="checkVal(subsetModel.minLon$|async)"
+                             [min]="checkValIfLimited(subsetModel.minLon$|async)"
+                             [max]="checkValIfLimited(subsetModel.maxLon$|async, true)"
                              (ngModelChange)="subsetModel.minLon$.next($event)"></p-inputNumber>
 
               <label for="minLonInput">Lon</label>
@@ -75,7 +77,8 @@
 
               <p-inputNumber id="maxLatInput" [minFractionDigits]="1" [maxFractionDigits]="3"
                              [ngModel]="(subsetModel.maxLat$|async)"
-                             [max]="checkVal(subsetModel.maxLat$|async)"
+                             [min]="checkValIfLimited(subsetModel.minLat$|async, true)"
+                             [max]="checkValIfLimited(subsetModel.maxLat$|async)"
                              (ngModelChange)="subsetModel.maxLat$.next($event)"></p-inputNumber>
 
               <label for="maxLatInput">Lat</label>
@@ -87,7 +90,8 @@
             <div class="p-float-label ">
               <p-inputNumber id="maxLonInput" [minFractionDigits]="1" [maxFractionDigits]="3"
                              [ngModel]="subsetModel.maxLon$|async"
-                             [max]="checkVal(subsetModel.maxLon$|async)"
+                             [min]="checkValIfLimited(subsetModel.minLon$|async, true)"
+                             [max]="checkValIfLimited(subsetModel.maxLon$|async)"
                              (ngModelChange)="subsetModel.maxLon$.next($event)"></p-inputNumber>
 
               <label for="maxLonInput">Lon</label>
