box shadow set to transparent

--- a/UI/src/primeng-style.scss
+++ b/UI/src/primeng-style.scss
@@ -3921,7 +3921,7 @@ div.carousel-caption{
 .p-panel .p-panel-header .p-panel-header-icon:focus {
   outline: 0 none;
   outline-offset: 0;
-  box-shadow: 0 0 0 0.2rem $base-color;
+  box-shadow: 0 0 0 0.2rem transparent;
 }
 
 .p-panel.p-panel-toggleable .p-panel-header {
