floating labels updated

--- a/UI/src/app/modules/anomalies/components/anomalies/anomalies.component.html
+++ b/UI/src/app/modules/anomalies/components/anomalies/anomalies.component.html
@@ -21,7 +21,7 @@
                         [ngModel]="selectedMethod$|async"
                         (ngModelChange)="selectedMethod$.next($event)"
                         optionLabel="description"></p-dropdown>
-            <label for="anomaliesMethodSelector">Method</label>
+            <label for="anomaliesMethodSelector">Select</label>
           </div>
         </div>
       </div>
