--- a/UI/src/app/modules/anomalies/components/anom-climatology/anom-climatology.component.html
+++ b/UI/src/app/modules/anomalies/components/anom-climatology/anom-climatology.component.html
@@ -14,7 +14,7 @@
                         (ngModelChange)="anomaliesModel.anomaliesFrom$.next($event)"
                         [maxDate]="anomaliesModel.anomaliesTo$|async"
             ></p-calendar>
-            <label for="fromDateInput">From</label>
+            <label for="fromDateInput">Choose a date</label>
           </div>
         </div>
       </div>
@@ -37,7 +37,7 @@
                         (ngModelChange)="anomaliesModel.anomaliesTo$.next($event)"
                         [minDate]="anomaliesModel.anomaliesFrom$|async"
             ></p-calendar>
-            <label for="toDateInput">To</label>
+            <label for="toDateInput">Choose a date</label>
           </div>
         </div>
       </div>
