--- a/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
+++ b/UI/src/app/modules/validation-period/components/validation-period/validation-period.component.html
@@ -22,7 +22,7 @@
                           [maxDate]="validationPeriodModel.intervalTo$|async"
                           [ngModel]="(validationPeriodModel.intervalFrom$|async)"
                           (ngModelChange)="validationPeriodModel.intervalFrom$.next($event)"></p-calendar>
-              <label for="fromDateInput">From</label>
+              <label for="fromDateInput">Choose a date</label>
             </div>
           </div>
 
@@ -50,7 +50,7 @@
                           [minDate]="validationPeriodModel.intervalFrom$|async"
                           [ngModel]="(validationPeriodModel.intervalTo$|async)"
                           (ngModelChange)="validationPeriodModel.intervalTo$.next($event)"></p-calendar>
-              <label for="toDateInput">To</label>
+              <label for="toDateInput">Chose a date</label>
             </div>
           </div>
         </div>
