--- a/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
+++ b/UI/src/app/modules/spatial-subset/components/spatial-subset/spatial-subset.component.html
@@ -1,7 +1,7 @@
 <p-panel header="Spatial Subsetting" [toggleable]="true" class="validation-row">
   <ng-template pTemplate="icons">
     <label class="p-panel-header-icon"
-           pTooltip="Restrict the input and reference data to a lat/lon bounding box (specified with lower left and upper right corner coordinates). You can also select the bounding box on a map above."
+           pTooltip="Restrict the input and reference data to a lat/lon bounding box (specified with lower left and upper right corner coordinates). You can also select the bounding box on the map above."
            tooltipPosition="bottom">
       <span class="pi pi-question-circle"></span>
     </label>
