--- a/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
+++ b/UI/src/app/modules/validation-result/components/buttons/buttons.component.html
@@ -122,7 +122,7 @@
             type="button"
             icon="pi pi-plus"
             class="btn-action"
-            title="Pin this validation"
+            title="Pin this validation. Pinning results gives a quick access to it."
             (click)="addValidation(validationRun.id)"
             onclick="">
     </button>
@@ -261,7 +261,7 @@
               type="button"
               icon="pi pi-times"
               class="btn-action-large"
-              label="Unpin"
+              label="Unpin validation"
               title="Remove this validation from your list"
               (click)="removeValidation(validationRun.id)">
       </button>
@@ -271,8 +271,8 @@
               pButton
               type="button"
               icon="pi pi-plus"
-              label="Pin"
-              title="Pinning results gives a quick access to it, however, if the results is removed by the owner, you will loose access to it."
+              label="Pin validation"
+              title="Pinning results gives a quick access to it."
               (click)="addValidation(validationRun.id)">
       </button>
 
