--- a/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
+++ b/UI/src/app/modules/navigation-bar/components/navigation-bar/navigation-bar.component.scss
@@ -3,6 +3,9 @@
   background-color: $base-color;
   margin-bottom: 1rem;
 }
+a {
+  color: white;
+}
 //.ui-menubar{
 //  background-color: $base-color !important;
 //}
