--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -89,7 +89,7 @@
       The Quality Assurance for Soil Moisture (<b>QA4SM</b>) service provides the user with:
       <ul class="list">
         <li>An easy-to-use interface for comparing satellite soil moisture data against land surface models and the <a
-          href="https://ismn.geo.tuwien.ac.at/">international soil moisture network</a></li>
+          href="https://ismn.geo.tuwien.ac.at/" target="_blank">international soil moisture network</a></li>
         <li>A traceble and consistent methodology for all comparisons</li>
         <li>Various filtering and scaling options to assess the impact of these on the validation results</li>
         <li>Traceable validation results in netCDF format and as visualisations (graphs and maps)</li>
@@ -170,8 +170,8 @@
 
   <footer class="container-marketing">
     <div>
-      Created by <a href="https://www.geo.tuwien.ac.at/">TU Wien GEO</a>
-      and <a href="https://www.awst.at/">AWST</a>.
+      Created by <a href="https://www.geo.tuwien.ac.at/" target="_blank">TU Wien GEO</a>
+      and <a href="https://www.awst.at/" target="_blank">AWST</a>.
     </div>
   </footer>
 </main>
