--- a/UI/src/app/pages/home/home.component.html
+++ b/UI/src/app/pages/home/home.component.html
@@ -113,7 +113,7 @@
              (click)="showGallery(0, workflowDiagram)"
              [alt]="workflowDiagram[0].description"
              id="workflow"
-             style="max-width: 80%"/>
+             style="max-width: 80%">
       </div>
     </div>
 
@@ -133,7 +133,7 @@
           <img class="scaled_image img-screen"
                [src]="cardValidate[0].plot"
                (click)="showGallery(0, cardValidate)"
-               [alt]="cardValidate[0].description"/>
+               [alt]="cardValidate[0].description">
         </div>
       </div>
 
@@ -147,7 +147,7 @@
                class="scaled_image img-screen"
                [src]="cardValidateResult[0].plot"
                (click)="showGallery(0, cardValidateResult)"
-               [alt]="cardValidateResult[0].description"/>
+               [alt]="cardValidateResult[0].description">
         </div>
       </div>
 
@@ -161,7 +161,7 @@
                class="scaled_image img-screen"
                [src]="cardValidateDetails[0].plot"
                (click)="showGallery(0, cardValidateDetails)"
-               [alt]="cardValidateDetails[0].description"/>
+               [alt]="cardValidateDetails[0].description">
         </div>
       </div>
     </div>
