password reset page added, appropriate url assigned, routing set

--- a/UI/src/app/pages/login/login.component.html
+++ b/UI/src/app/pages/login/login.component.html
@@ -27,7 +27,7 @@
                   label="Sign in">
           </button>
 
-          <div class="p-mt-3"><a href="{% url 'password_reset' %}" class="mt-5">Forgotten your password?</a></div>
+          <div class="p-mt-3"><a [routerLink]="'/password-reset'" class="mt-5">Forgotten your password?</a></div>
         </form>
       </div>
     </div>
