--- a/UI/src/app/pages/password-reset/password-reset.component.html
+++ b/UI/src/app/pages/password-reset/password-reset.component.html
@@ -2,25 +2,29 @@
   <div class="center">
     <div class="p-grid">
 
-      <div class="p-col" style="max-width: 15rem">
+      <div class="p-col" style="max-width: 20rem">
         <form [formGroup]="resetPasswordForm" class="text-center" (ngSubmit)="onSubmit()">
           <h1 class="h3 p-mt-5 p-mb-0 font-weight-normal">Password reset</h1>
           <p>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</p>
 
           <div class="p-fluid">
           <span class="p-float-label p-mb-5">
-          <input pPassword type="email"
-                 formControlName="email" [feedback]="false" id="emailInput">
-          <label for="passwordInput">Password</label>
+          <input class="form-field" pInputText
+                 type="email"
+                 [email]="true"
+                 pTooltip="The email address you registered your account with."
+                 formControlName="email"
+                 id="emailInput">
+          <label for="emailInput">Email</label>
+
         </span>
           </div>
 
           <button pButton
                   type="submit"
-                  label="Sign in">
+                  label="Reset my password" [disabled]="resetPasswordForm.invalid">
           </button>
 
-          <div class="p-mt-3"><a href="{% url 'password_reset' %}" class="mt-5">Forgotten your password?</a></div>
         </form>
       </div>
     </div>
